xxx.txt

 1. cmake --build build --parallel to regenerate all targets with the patched gRPC header.
  2. ctest --test-dir build --output-on-failure to ensure nothing else regressed.

  1.66 -> 1.44
  

  /Users/bechaderenaud/work/hermeneutic/hermeneutic-cpp-test-scratchpad/build/_deps/grpc-src/include/grpcpp/support/proto_buffer_writer.h:191:20: warning: implicit conversion changes signedness: 'int64_t' (aka 'long long') to 'unsigned long long' [-Wsign-conversion]
   52 |     Slice slice(byte_size);
      |           ~~~~~ ^~~~~~~~~
  191 |     set_byte_count(ByteCount() + cur);
      |                    ^~~~~~~~~~~ ~
In file included from /Users/bechaderenaud/work/hermeneutic/hermeneutic-cpp-test-scratchpad/services/price_bands_service/main.cpp:6:
In file included from /Users/bechaderenaud/work/hermeneutic/hermeneutic-cpp-test-scratchpad/build/proto/aggregator.grpc.pb.h:18:
/Users/bechaderenaud/work/hermeneutic/hermeneutic-cpp-test-scratchpad/build/_deps/grpc-src/include/grpcpp/impl/proto_utils.h:52:17: warning: implicit conversion changes signedness: 'int' to 'size_t' (aka 'unsigned long') [-Wsign-conversion]
   52 |     Slice slice(byte_size);
      |           ~~~~~ ^~~~~~~~~
/Users/bechaderenaud/work/hermeneutic/hermeneutic-cpp-test-scratchpad/services/bbo_service/main.cpp:8:10: fatal error: 'services/common/grpc_helpers.hpp' file not found
    8 | #include "services/common/grpc_helpers.hpp"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/bechaderenaud/work/hermeneutic/hermeneutic-cpp-test-scratchpad/services/volume_bands_service/main.cpp:8:10: fatal error: 'services/common/grpc_helpers.hpp' file not found
    8 | #include "services/common/grpc_helpers.hpp"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/bechaderenaud/work/hermeneutic/hermeneutic-cpp-test-scratchpad/services/price_bands_service/main.cpp:8:10: fatal error: 'services/common/grpc_helpers.hpp' file not found
    8 | #include "services/common/grpc_helpers.hpp"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
29 warnings and 1 error generated.
29 warnings and 1 error generated.
29 warnings and 1 error generated.
make[2]: make[2]: *** [services/volume_bands_service/CMakeFiles/volume_bands_service.dir/main.cpp.o] Error 1
*** [services/bbo_service/CMakeFiles/bbo_service.dir/main.cpp.o] Error 1
make[2]: *** [services/price_bands_service/CMakeFiles/price_bands_service.dir/main.cpp.o] Error 1
make[1]: *** [services/bbo_service/CMakeFiles/bbo_service.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make[1]: *** [services/volume_bands_service/CMakeFiles/volume_bands_service.dir/all] Error 2
make[1]: *** [services/price_bands_service/CMakeFiles/price_bands_service.dir/all] Error 2
make: *** [all] Error 2
(base) bechaderenaud@phoenix build % 


===

wss
=> make sure we reconnect on error, and maybe skip sequence numbers
 still, while loop with wait or ... condition variables etc. ??
 [CODE REVIEW lol]

=> have a look at logs

=> build, how to remove the whole dep check each time by default ***
  ==> time cmake --build --preset relwithdebinfo-8jobs --target aggregator
Built target simdjson
Built target spdlog
Built target common
Built target lob
Built target aggregator
cmake --build --preset relwithdebinfo-8jobs --target aggregator  0.11s user 0.05s system 103% cpu 0.163 total

=> decimal type is probably crap 

=> documented diffs with actual protocols (see docs/protocol_diffs/*.md)
done

==== linux target
grpc-src/third_party/abseil-cpp/absl/strings/internal/str_format/extension.cc:44:13: error: ‘FormatConversionCharSet’ does not name a type; did you mean ‘FormatConversionCharInternal’? 44 | constexpr FormatConversionCharSet FormatConversionCharSetInternal::c; | ^~~~~~~~~~~~~~~~~~~~~~~
Cette erreur survient généralement lors de la compilation d'une ancienne version de gRPC (ou de sa dépendance Abseil) avec un compilateur récent comme GCC 13+. 
Le problème provient d'un changement dans la gestion des dépendances d'en-têtes et de la syntaxe des énumérations scopées dans les versions récentes de GCC, ce qui empêche le compilateur de reconnaître le type FormatConversionCharSet. 
Solutions recommandées
Mise à jour (Recommandé) :
La solution la plus propre est de mettre à jour gRPC vers une version récente (ex: v1.69.0+) ou de forcer la mise à jour du sous-module Abseil. Ce bug a été corrigé dans Abseil via le commit b957f0c.
Correction manuelle (Patch) :
Si vous devez absolument conserver cette version, vous pouvez appliquer un patch sur le fichier absl/strings/internal/str_format/extension.h :
Ajout d'en-tête : Ajoutez #include <cstdint> au début du fichier.
Correction de syntaxe : Remplacez les déclarations d'énumérations scopées mal formées. Par exemple, si vous voyez enum class FormatConversionChar : uint8_t;, assurez-vous que la définition complète est visible ou retirez le mot-clé class dans les déclarations anticipées si nécessaire selon votre version de standard C++.
Utilisation du standard C++11 :
Dans certains cas, forcer le compilateur à utiliser C++11 via l'indicateur --std=c++11 dans vos CMAKE_CXX_FLAGS peut contourner les restrictions strictes de GCC 13. 
Souhaitez-vous les instructions spécifiques pour appliquer ce patch via un fichier .patch ou préférez-vous de l'aide pour mettre à jour vos sous-modules Git ? 

====

=> more decimal tests ~
=> smart enums 

=> fast replay mode, with timestamps checks and "false timestamps"
=> alerts, Stan style [not too much repeat]

chekc : make sure the aggregator sends update at every source update, with a startup time [i.e. only start diffusing updates if all sources are updated],
▌ make sure updates can be pushed asynchronously and concurrently *** propagate to test suite

then look at aggregation clients/subscribers
and iterate design ( => lockless, some waitfree if possible etc.)

check compliance with specs again before doing someting more interesting ~
security: use a non-trivial pwd ...

? build/ folder "collision" ?
? docker image sizes (multistage right?)
? follow specs for price/volume bands 
? accelerated virtual time mode ...

 docker compose -f docker/compose.yml up --build
 docker build sh too slow (cross compile to linux/amd64)

 ===
 release build
 debug build
doc debug sessions 
...
the waitfree list/queue ~ 22'
run the whole stuff without docker with hints at how to dedug that
sanitizers & maybe valgrind runs + code coverage 
vendorizing/devendorizing exercise 
docker stuff ~> reduce logs optionally 
FX for volumes ~
about the run it all in one go mode: run the tests in the end
semi magic all in one run script, even without the "fast replay mode"
no socket test stuff
fix run local stck one/linux: 15s but why include build time ...

=== in codespace

sudo apt-get update
  sudo apt-get install -y ca-certificates curl gnupg lsb-release
  sudo install -m 0755 -d /etc/apt/keyrings
  curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --yes --dearmor -o /etc/apt/keyrings/docker.gpg
  echo \
    "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] \
    https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" \
    | sudo tee /etc/apt/sources.list.d/docker.list >/dev/null
  sudo apt-get update
  sudo apt-get install -y docker-ce docker-ce-cli containerd.io
  sudo usermod -aG docker $USER
  newgrp docker   # re-evaluate group membership without restarting
  docker run hello-world

===
sudo systemctl enable docker
  sudo systemctl start docker
=======
docker in codespace?

===
linux only ? 

[2026-02-10 22:03:50.438] [info] Aggregator service stopped
[local-stack-once] running CSV validation
[price_bands] 326 issue(s):
  - 1770761020180519350: band 200 bps has bid 30437.91319598 > ask 29609.83634051 (row 3)
  - 1770761020180519350: band 1000 bps has bid 30079.40638795 > ask 29968.51382153 (row 5)
  - 1770761020230105777: band 200 bps has bid 30437.91319598 > ask 29609.83634051 (row 8)
  - 1770761020230105777: band 1000 bps has bid 30079.40638795 > ask 29968.51382153 (row 10)
  - 1770761020330615152: band 200 bps has bid 30437.91319598 > ask 29609.83634051 (row 13)
  - 1770761020330615152: band 1000 bps has bid 30079.40638795 > ask 29968.51382153 (row 15)
  - 1770761020331808535: band 200 bps has bid 30437.91319598 > ask 29609.83634051 (row 18)
  - 1770761020331808535: band 1000 bps has bid 30079.40638795 > ask 29968.51382153 (row 20)
  - 1770761020450209667: band 200 bps has bid 30437.91319598 > ask 29609.83634051 (row 23)
  - 1770761020450209667: band 1000 bps has bid 30079.40638795 > ask 29968.51382153 (row 25)
  - 1770761020480742673: band 200 bps has bid 30437.91319598 > ask 29603.92050993 (row 28)
  - 1770761020480742673: band 1000 bps has bid 30079.40638795 > ask 29962.52632979 (row 30)
  - 1770761020531932499: band 200 bps has bid 30437.91319598 > ask 29603.92050993 (row 33)
  - 1770761020531932499: band 1000 bps has bid 30079.40638795 > ask 29962.52632979 (row 35)
  - 1770761020631007305: band 200 bps has bid 30437.91319598 > ask 29603.92050993 (row 38)
  - 1770761020631007305: band 1000 bps has bid 30079.40638795 > ask 29962.52632979 (row 40)
  - 1770761020670341347: band 200 bps has bid 30437.91319598 > ask 29603.92050993 (row 43)
  - 1770761020670341347: band 1000 bps has bid 30079.40638795 > ask 29962.52632979 (row 45)
  - 1770761020732029143: band 200 bps has bid 30437.91319598 > ask 29603.92050993 (row 48)
  - 1770761020732029143: band 1000 bps has bid 30079.40638795 > ask 29962.52632979 (row 50)
  ... 306 more

but things are okay on mac???

=> add more internal tests ...

price band / FX

measure performances

some test with eigenbugs - on small vms lol ~ but rest starts to look good
 Start  5: test_book_stream_client // m...
 
== linux amd64 okay 
Test #6 test_aggregator_grpc_service make sure there is no timing problem ~

==
volume_bands => what FX
run one go "accelerated" ~ virtual time
ccache or sccache 